Fixed layout issues Added confirmation message for logout Started to add buttons for each route

--- a/css/style.css
+++ b/css/style.css
@@ -10,17 +10,36 @@
     right: 20px;
     cursor: pointer;
 }
+.welcome{
+    margin-top: 44px;
+    margin-left: 30px;
+    text-align: left;
+
+}
+.calendarContainer{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
 .monday, .tuesday, .wednesday, .thursday, .friday, .saturday, .sunday{
     display:inline-block;
-    margin: auto;
+    width: 100%;
+    margin: 10px;
+}
+.weekdays{
+    display:inline-block;
+    border: 1px solid black;
+    border-radius: 40px;
+    width: inherit;
 }
 .table{
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    width: 160px;
+    width: inherit;
     border: ridge;
     margin-top: 10px;
-    margin-left: 15px;
 }
 .rows {
     border: 1px solid #dddddd;
@@ -33,13 +52,7 @@
     text-align: center;
     padding: 8px;
 }
-.weekdays{
-    display:inline-block;
-    border: 1px solid black;
-    border-radius: 40px;
-    width: 160px;
-    margin-left: 15px;
-}
+
 h2{
     text-align: center;
 }
@@ -49,7 +62,7 @@ h2{
     margin-top: 50px;
 }
 .container{
-    width: 500px;
+    width: calc(100% - 150px);
     height:400px;
     text-align: center;
     border-radius: 4px;
@@ -103,11 +116,24 @@ p{
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
 /* Modal Content */
+.logout-modal-content{
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 50%;
+    height: 235px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
 .password-modal-content {
     position: relative;
     background-color: #fefefe;
@@ -159,3 +185,7 @@ p{
 }
 
 .password-modal-body {padding: 2px 16px;}
+
+input, button{
+    border: none;
+}
